--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
 
         </section>
 
+
+        <div class="sub-title">
+            <h2>Ecco il tuo biglietto</h2>
+        </div> 
+
+
         <section id="ticket">
+
             <div class="card">
                 <p class="labels">Questo è il biglietto di: </p>
                 <p id="guest"> </p>
